<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#88D8E4"
    android:backgroundTintMode="src_in"
    android:hapticFeedbackEnabled="false"
    tools:context=".SonucEkraniActivity">

    <Button
        android:id="@+id/buttonTekrarDene1"
        android:layout_width="219dp"
        android:layout_height="55dp"
        android:layout_marginBottom="6dp"
        android:text="@string/start"
        app:layout_constraintBottom_toTopOf="@+id/banner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/score1"
        android:textColor="@android:color/secondary_text_light"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewEnYuksekSkor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="0"
        android:textColor="@android:color/secondary_text_light"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textViewToplamSkor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="0"
        android:textColor="@android:color/secondary_text_light"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:text="@string/highest_score"
        android:textColor="@android:color/secondary_text_light"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewEnYuksekSkor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewToplamSkor" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginEnd="3dp"
        app:layout_constraintEnd_toStartOf="@+id/textViewkirmizisonuc"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/kirmizibalik" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="40dp"
        android:layout_height="35dp"
        android:layout_marginEnd="3dp"
        app:layout_constraintEnd_toStartOf="@+id/textViewmavisonuc"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mavibalik" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="35dp"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="3dp"
        app:layout_constraintEnd_toStartOf="@+id/textViewsarisonuc"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/saribalik3" />

    <TextView
        android:id="@+id/textViewkirmizisonuc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="10dp"
        android:text="0"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/imageView10"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewmavisonuc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="10dp"
        android:text="0"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/imageView11"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewsarisonuc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="16dp"
        android:text="0"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="215dp"
        android:layout_height="218dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/kp1" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/banner"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-3025903384058604/9085676977"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"></com.google.android.gms.ads.AdView>


</androidx.constraintlayout.widget.ConstraintLayout>